[package]
name = "helix-api"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
validator = { version = "0.20", features = ["derive"] }
